# plateau-api-mcp

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
src/plateau_api_mcp/: plateau_api.py
